fix(css): hide color mode switcher on mobile breakpoint

--- a/src/styles/_masthead.css
+++ b/src/styles/_masthead.css
@@ -22,6 +22,10 @@
   .masthead .inner .logo {
     margin-bottom: var(--p-space-s);
   }
+
+  #theme-selector {
+    display: none;
+  }
 }
 
 .masthead__logo a {
